iPhone scroll performance fix (backface visibility re-added)

--- a/kitchensink/jq.ui.css
+++ b/kitchensink/jq.ui.css
@@ -219,7 +219,7 @@ width:100%;
 	overflow:auto;
 	-webkit-overflow-scrolling:touch;
 } /* This class is applied to the divs that contain the various "views" or pages of the app. */
-.panel > .jqmScrollPanel, .panel > .jqmScrollbar {
+.panel > .jqmScrollPanel, .panel > .jqmScrollbar, .panel > * {
 	-webkit-backface-visibility: hidden;
 	-webkit-perspective: 1000;
 }
